05-test-bot-emulation / run 01

--- a/tests/31-browser-and-c2s/01.output.md
+++ b/tests/31-browser-and-c2s/01.output.md
@@ -1,3 +1,5 @@
+```bash
+npm run start -- run --test '31-browser-and-c2s' -s server1 --comments 'Runned on server1.' --run-name '01'  2>&1 | tee tests/31-browser-and-c2s/01.output.md
 
 > livechat-perf-test@0.0.1 start
 > npx ts-node ./src/index.ts run --test 31-browser-and-c2s -s server1 --comments Runned on server1. --run-name 01
@@ -479,3 +481,4 @@ TestSuite (114.927s): Waiting all tasks to terminate.
 Task monitor_server (135.277s): Top closed.
 TestSuite (135.280s): Writing results...
 Tests finished.
+```
