--- a/tests/05-test-bot-emulation/01.output.md
+++ b/tests/05-test-bot-emulation/01.output.md
@@ -1,3 +1,5 @@
+```bash
+npm run start -- run --test '05-test-bot-emulation' -s server1 --comments 'Runned on server1.' --run-name '01'  2>&1 | tee tests/05-test-bot-emulation/01.output.md
 
 > livechat-perf-test@0.0.1 start
 > npx ts-node ./src/index.ts run --test 05-test-bot-emulation -s server1 --comments Runned on server1. --run-name 01
@@ -933,3 +935,4 @@ TestSuite (174.432s): Writing results...
 Warning: empty y range [0:0], adjusting to [-1:1]
 
 Tests finished.
+```
