--- a/tests/33-prosody-gc/02.output.md
+++ b/tests/33-prosody-gc/02.output.md
@@ -1,3 +1,5 @@
+```bash
+npm run start -- run --test '33-prosody-gc' -s server1 --comments 'Runned on server1.' --run-name '02'  2>&1 | tee tests/33-prosody-gc/02.output.md
 
 > livechat-perf-test@0.0.1 start
 > npx ts-node ./src/index.ts run --test 33-prosody-gc -s server1 --comments Runned on server1. --run-name 02
@@ -15142,3 +15144,4 @@ TestSuite (304.420s): Writing results...
 Warning: empty y range [0:0], adjusting to [-1:1]
 
 Tests finished.
+```
